--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -49,7 +49,7 @@
              android:orientation="vertical">
 
         <TextView
-             android:text="Su Shell"
+             android:text="Shell"
              android:textSize="23sp"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content" />
@@ -72,22 +72,29 @@
             android:layout_height="wrap_content" 
             android:layout_width="wrap_content"
             android:textSize="20sp"
-            android:text="Su Shell:" />
+            android:text="Shell:" />
 
       <EditText
-           android:layout_width="210dp"
+           android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/command_EditText"
-           android:hint="Android Su exec"
+           android:hint="Android shell exec"
            android:maxLines="1"
            android:singleLine="true"
            android:scrollHorizontally="true" />
 
       <Button
-          android:layout_width="wrap_content"
+          android:layout_width="77dp"
           android:layout_height="wrap_content"
           android:id="@+id/execute_Button"
-          android:text="ok" />
+          android:text="shell" />
+                        
+      <Button
+          android:layout_width="77dp"
+          android:layout_height="wrap_content"
+          android:id="@+id/exec_Button"
+          android:layout_marginStart="4dp"
+          android:text="exec" />
 
     </LinearLayout>
                         
@@ -103,6 +110,8 @@
          android:layout_height="wrap_content"
          android:layout_marginTop="13dp"
          android:layout_marginBottom="70dp"
+         android:longClickable="true"
+         android:textIsSelectable="true"
          android:textSize="16sp" />
     
  </LinearLayout>
