--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,6 +4,15 @@
      <item name="actionBarSize">39dp</item>
     <item name="colorPrimaryDark">@color/com_apps</item>
   </style>
-
   <style name="AppTheme" parent="Base.AppTheme" />
+  <!-- Base activity theme. -->
+  <style name="Base.Activity.AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- item. -->
+  </style>
+  <style name="ActivityTheme" parent="Base.Activity.AppTheme" />
+  <!-- Base LxynActivity theme. -->
+  <style name="Base.LActivity.AppTheme" parent="Theme.Material3.DayNight">
+    <item name="colorPrimaryDark">@color/com_apps</item>
+  </style>
+  <style name="LActivityTheme" parent="Base.LActivity.AppTheme" />
 </resources>
