--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                     android:id="@+id/textViewHello"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp" />
+                    android:textSize="27sp" />
 
                 <TextView
                     android:id="@+id/textViewManufacturer"
@@ -72,6 +72,11 @@
                     android:id="@+id/textViewSecurityPatch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+                    
+                <TextView
+                    android:id="@+id/textViewBuildTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/textViewSystemVersion"
@@ -104,17 +109,22 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/textViewBuildTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
                     android:id="@+id/textViewHardwareName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/textViewgpuName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/textViewAndroidId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/textViewRefreshRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
